# licenseme

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  util.rs
src/spdx/: mod.rs  result.rs  typ.rs
src/viewers/: license.rs  mod.rs  select.rs
